    purely on the channel now
    - remove debian/firefox-beta.desktop.in
    - remove debian/firefox-nightly.desktop.in
    - remove debian/firefox-unofficial.desktop.in
    - rename debian/firefox-final.desktop.in => debian/firefox.desktop.in
    - update debian/firefox.desktop.in
    - update debian/rules
    - update debian/firefox.sh.in

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 18 Apr 2011 21:57:58 +0100

firefox-4.0 (4.0~b12+build1+nobinonly-0ubuntu1) natty; urgency=low

  * New upstream release v4.0 B12 (FIREFOX_4_0b12_BUILD1)

  * Land the Unity appmenu extension work. It's shipped in its own package,
    although we build it from the Firefox source tree
  * Fix build with system NSPR
    - update debian/firefox-dev.install.in
  * Bump Standards-Version to 3.9.1
    - update debian/control
  * Add support for unpacked xpi's in the apport hook when reporting
    the extensions installed
    - update debian/apport/firefox.py.in
  * Ensure the Apport hook can be tested properly without modification
    - update debian/apport/firefox.py.in
  * Fix description of firefox-dev
    - update debian/control
  * Don't ship a vendor.js with our preferences in, as it requires a patch
    in order to get it in to the distributed omni.jar. Instead, move our
    vendor prefs in to distribution.ini
    - remove debian/vendor.js
    - update debian/distribution.ini
    - update debian/rules
    - remove debian/patches/install-ubuntu-prefs.patch
    - update debian/patches/series
  * Fix desktop-entry-invalid-category lintian warnings - remove Internet
    and Application categories, add GTK and GNOME
    - update debian/firefox-beta.desktop.in
    - update debian/firefox-final.desktop.in
    - update debian/firefox-nightly.desktop.in
    - update debian/firefox-unofficial.desktop.in
  * Fix build with system NSPR
    - update debian/firefox-dev.install.in
  * Add some missing files to the SDK
    - update debian/firefox-dev.install.in