@@ -3,17 +3,25 @@ Version=1.0
 %%ifdef OFFICIAL_BRANDING
 Name=Firefox Web Browser
 Name[ar]=متصفح الوِب فَيَرفُكْس
+Name[ast]=Restolador web Firefox
+Name[bn]=ফায়ারফক্স ওয়েব ব্রাউজার
 Name[ca]=Navegador web Firefox
 Name[cs]=Firefox Webový prohlížeč
+Name[da]=Firefox - internetbrowser
 Name[es]=Navegador web Firefox
 Name[et]=Firefoxi veebibrauser
 Name[fa]=مرورگر اینترنتی Firefox
 Name[fi]=Firefox-selain
 Name[fr]=Navigateur Web Firefox
+Name[gl]=Navegador web Firefox
+Name[he]=דפדפן האינטרנט Firefox
+Name[hr]=Firefox web preglednik
 Name[hu]=Firefox webböngésző
 Name[it]=Firefox Browser Web
 Name[ja]=Firefox ウェブ・ブラウザ
 Name[ko]=Firefox 웹 브라우저
+Name[ku]=Geroka torê Firefox
+Name[lt]=Firefox interneto naršyklė
 Name[nb]=Firefox Nettleser
 Name[nl]=Firefox webbrowser
 Name[nn]=Firefox Nettlesar
@@ -21,25 +29,36 @@ Name[no]=Firefox Nettleser
 Name[pl]=Przeglądarka WWW Firefox
 Name[pt]=Firefox Navegador Web
 Name[pt_BR]=Navegador Web Firefox
-Name[sk]=Firefox - internetový prehliadač
-Name[sv]=Webbläsaren Firefox
+Name[ro]=Firefox – Navigator Internet
 Name[ru]=Веб-браузер Firefox
+Name[sk]=Firefox - internetový prehliadač
+Name[sl]=Firefox spletni brskalnik
+Name[sv]=Webbläsaren Firefox
+Name[ug]=Firefox توركۆرگۈ
+Name[uk]=Веб-браузер Firefox
 Name[vi]=Trình duyệt web Firefox
 Name[zh_CN]=Firefox 网络浏览器
 Name[zh_TW]=Firefox 網路瀏覽器
 %%else
 Name=@DISPLAY_NAME@ Web Browser
+Name[ast]=Restolador web @DISPLAY_NAME@
 Name[ca]=Navegador web @DISPLAY_NAME@
 Name[cs]=@DISPLAY_NAME@ Webový prohlížeč
+Name[da]=@DISPLAY_NAME@ - internetbrowser
 Name[es]=Navegador web @DISPLAY_NAME@
 Name[et]=@DISPLAY_NAME@i veebibrauser
 Name[fa]=مرورگر اینترنتی @DISPLAY_NAME@
 Name[fi]=@DISPLAY_NAME@-selain
 Name[fr]=Navigateur Web @DISPLAY_NAME@
+Name[gl]=Navegador web @DISPLAY_NAME@
+Name[he]=דפדפן האינטרנט @DISPLAY_NAME@
+Name[hr]=@DISPLAY_NAME@ web preglednik
 Name[hu]=@DISPLAY_NAME@ webböngésző
 Name[it]=@DISPLAY_NAME@ Browser Web
 Name[ja]=@DISPLAY_NAME@ ウェブ・ブラウザ
 Name[ko]=@DISPLAY_NAME@ 웹 브라우저
+Name[ku]=Geroka torê @DISPLAY_NAME@
+Name[lt]=@DISPLAY_NAME@ interneto naršyklė
 Name[nb]=@DISPLAY_NAME@ Nettleser
 Name[nl]=@DISPLAY_NAME@ webbrowser
 Name[nn]=@DISPLAY_NAME@ Nettlesar
@@ -47,27 +66,39 @@ Name[no]=@DISPLAY_NAME@ Nettleser
 Name[pl]=Przeglądarka WWW @DISPLAY_NAME@
 Name[pt]=@DISPLAY_NAME@ Navegador Web
 Name[pt_BR]=Navegador Web @DISPLAY_NAME@
-Name[sk]=@DISPLAY_NAME@ - internetový prehliadač
-Name[sv]=Webbläsaren @DISPLAY_NAME@
+Name[ro]=@DISPLAY_NAME@ – Navigator Internet
 Name[ru]=Веб-браузер @DISPLAY_NAME@
+Name[sk]=@DISPLAY_NAME@ - internetový prehliadač
+Name[sl]=@DISPLAY_NAME@ spletni brskalnik
+Name[sv]=Webbläsaren @DISPLAY_NAME@
+Name[ug]=@DISPLAY_NAME@ توركۆرگۈ
+Name[uk]=Веб-браузер @DISPLAY_NAME@
 Name[vi]=Trình duyệt web @DISPLAY_NAME@
 Name[zh_CN]=@DISPLAY_NAME@ 网络浏览器
 Name[zh_TW]=@DISPLAY_NAME@ 網路瀏覽器
 %%endif
 Comment=Browse the World Wide Web
 Comment[ar]=تصفح الشبكة العنكبوتية العالمية
-Comment[ca]=Navegueu per el web
+Comment[ast]=Restola pela Rede
+Comment[bn]=ইন্টারনেট ব্রাউজ করুন
+Comment[ca]=Navegueu per la web
 Comment[cs]=Prohlížení stránek World Wide Webu
+Comment[da]=Surf på internettet
 Comment[de]=Im Internet surfen
 Comment[es]=Navegue por la web
 Comment[et]=Lehitse veebi
 Comment[fa]=صفحات شبکه جهانی اینترنت را مرور نمایید
 Comment[fi]=Selaa Internetin WWW-sivuja
-Comment[fr]=Navigue sur Internet
+Comment[fr]=Naviguer sur le Web
+Comment[gl]=Navegar pola rede
+Comment[he]=גלישה ברחבי האינטרנט
+Comment[hr]=Pretražite web
 Comment[hu]=A világháló böngészése
 Comment[it]=Esplora il web
 Comment[ja]=ウェブを閲覧します
 Comment[ko]=웹을 돌아 다닙니다
+Comment[ku]=Li torê bigere
+Comment[lt]=Naršykite internete
 Comment[nb]=Surf på nettet
 Comment[nl]=Verken het internet
 Comment[nn]=Surf på nettet
@@ -75,25 +106,37 @@ Comment[no]=Surf på nettet
 Comment[pl]=Przeglądanie stron WWW 
 Comment[pt]=Navegue na Internet
 Comment[pt_BR]=Navegue na Internet
-Comment[sk]=Prehliadanie internetu
-Comment[sv]=Surfa på webben
+Comment[ro]=Navigați pe Internet
 Comment[ru]=Доступ в Интернет
+Comment[sk]=Prehliadanie internetu
+Comment[sl]=Brskajte po spletu
+Comment[sv]=Surfa på webben
+Comment[ug]=دۇنيادىكى توربەتلەرنى كۆرگىلى بولىدۇ
+Comment[uk]=Перегляд сторінок Інтернету
 Comment[vi]=Để duyệt các trang web
 Comment[zh_CN]=浏览互联网
 Comment[zh_TW]=瀏覽網際網路
 GenericName=Web Browser
 GenericName[ar]=متصفح وب
+GenericName[ast]=Restolador Web
+GenericName[bn]=ওয়েব ব্রাউজার
 GenericName[ca]=Navegador web
 GenericName[cs]=Webový prohlížeč
+GenericName[da]=Webbrowser
 GenericName[es]=Navegador web
 GenericName[et]=Veebibrauser
 GenericName[fa]=مرورگر اینترنتی
 GenericName[fi]=WWW-selain
 GenericName[fr]=Navigateur Web
+GenericName[gl]=Navegador Web
+GenericName[he]=דפדפן אינטרנט
+GenericName[hr]=Web preglednik
 GenericName[hu]=Webböngésző
-GenericName[it]=Browser Web
+GenericName[it]=Browser web
 GenericName[ja]=ウェブ・ブラウザ
 GenericName[ko]=웹 브라우저
+GenericName[ku]=Geroka torê
+GenericName[lt]=Interneto naršyklė
 GenericName[nb]=Nettleser
 GenericName[nl]=Webbrowser
 GenericName[nn]=Nettlesar
@@ -101,9 +144,13 @@ GenericName[no]=Nettleser
 GenericName[pl]=Przeglądarka WWW
 GenericName[pt]=Navegador Web
 GenericName[pt_BR]=Navegador Web
-GenericName[sk]=Internetový prehliadač
-GenericName[sv]=Webbläsare
+GenericName[ro]=Navigator Internet
 GenericName[ru]=Веб-браузер
+GenericName[sk]=Internetový prehliadač
+GenericName[sl]=Spletni brskalnik
+GenericName[sv]=Webbläsare
+GenericName[ug]=توركۆرگۈ
+GenericName[uk]=Веб-браузер
 GenericName[vi]=Trình duyệt Web
 GenericName[zh_CN]=网络浏览器
 GenericName[zh_TW]=網路瀏覽器
@@ -116,3 +163,33 @@ Categories=GNOME;GTK;Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/vnd.mozilla.xul+xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/chrome;
 StartupWMClass=@DISPLAY_NAME@
 StartupNotify=true
+X-Ayatana-Desktop-Shortcuts=NewWindow;
+
+[NewWindow Shortcut Group]
+Name=Open a New Window
+Name[ast]=Abrir una ventana nueva
+Name[bn]=Abrir una ventana nueva
+Name[ca]=Obre una finestra nova
+Name[da]=Åbn et nyt vindue
+Name[de]=Ein neues Fenster öffnen
+Name[es]=Abrir una ventana nueva
+Name[fi]=Avaa uusi ikkuna
+Name[fr]=Ouvrir une nouvelle fenêtre
+Name[gl]=Abrir unha nova xanela
+Name[he]=פתיחת חלון חדש
+Name[hr]=Otvori novi prozor
+Name[hu]=Új ablak nyitása
+Name[it]=Apri una nuova finestra
+Name[ja]=新しいウィンドウを開く
+Name[ku]=Paceyeke nû veke
+Name[lt]=Atverti naują langą
+Name[nl]=Nieuw venster openen
+Name[ro]=Deschide o fereastră nouă
+Name[ru]=Открыть новое окно
+Name[sv]=Öppna ett nytt fönster
+Name[ug]=يېڭى كۆزنەك ئېچىش
+Name[uk]=Відкрити нове вікно
+Name[zh_CN]=新建窗口
+Name[zh_TW]=開啟新視窗
+Exec=@APPNAME@ -new-window about:blank
+TargetEnvironment=Unity
