@@ -84,8 +84,12 @@ firefox-trunk (6.0~a1~hg20110417r68226+nobinonly-0ubuntu1) UNRELEASED; urgency=l
     - update debian/firefox.desktop.in
     - update debian/rules
     - update debian/firefox.sh.in
+  * Update desktop file translations
+    - update debian/firefox.desktop.in
+  * Add static quicklist item 'Open a New Window'. (LP: #741046)
+    - update debian/firefox.desktop.in
 
- -- Chris Coulson <chris.coulson@canonical.com>  Mon, 18 Apr 2011 21:57:58 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Mon, 18 Apr 2011 22:06:35 +0100
 
 firefox-4.0 (4.0~b12+build1+nobinonly-0ubuntu1) natty; urgency=low
 
